--- a/modified/resume.html
+++ b/modified/resume.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+	<link rel="icon" href="Image/About_Me/about_me.png">
         <title>Resume</title>
         <style>
             * {
@@ -185,7 +186,7 @@
 
     <body>
         <div id="nameBox">
-            <p id="name"><a id ="nameLink" href="HaleyHome.html">Haley Lai</a></p>
+            <p id="name"><a id ="nameLink" href="default.html">Haley Lai</a></p>
         </div>
         <div id="naviBox">
             <ul>
@@ -221,7 +222,7 @@
             <div id="skillTitle"><h2>Skills and Abilities:</h2></div>
             <div id="skillBox"><p id="skill"><b>Programming skills:</b> C++, Java, Python, Bash, Assembly programming, HTML, CSS<br>
                 <b>Computer skills:</b> Unix, Linux, Windows 10, Git, MS Office<br>
-                <b>Languages:</b> Englisn and Mandarin</p>
+                <b>Languages:</b> English and Mandarin</p>
             </div>
             <h2 style="margin-left: 50px; margin-bottom: 20px;">Work Experience:</h2>
             <div id="i4nsBox"><div id="i4ns"><b style="text-align: left;">Innovating for National Security Internship: Qualcomm Institute, UC San Diego</b>
