--- a/modified/default.html
+++ b/modified/default.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+	<link rel="icon" href="Image/About_Me/about_me.png">
         <title>Haley's Website</title>
         <style>
             * {
@@ -143,7 +144,7 @@
 
     <body>
         <div id="nameBox">
-            <p id="name"><a id ="nameLink" href="HaleyHome.html">Haley Lai</a></p>
+            <p id="name"><a id ="nameLink" href="default.html">Haley Lai</a></p>
         </div>
         <div id="naviBox">
             <ul>
