--- a/default.html
+++ b/default.html
@@ -179,7 +179,7 @@
                 <div id="pathfindingBox"><a href = "https://github.com/Haley-1617/pathfinding" target = "_blank">
                 <img id = "pathfinding" src = "pathfinding.gif"></a>
                 <p style = "text-align: center;
-                font-family: Arial, Helvetica, sans-serif;;">pathfinding (in development)</p></div>
+                font-family: Arial, Helvetica, sans-serif;;">pathfinding</p></div>
             </div>
         </div>
         <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
