--- a/aboutMe.html
+++ b/aboutMe.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+	<link rel="icon" href="Image/About_Me/about_me.png">
         <title>About Me</title>
         <style>
             * {
@@ -120,7 +121,7 @@
 
     <body>
         <div id="nameBox">
-            <p id="name"><a id ="nameLink" href="HaleyHome.html">Haley Lai</a></p>
+            <p id="name"><a id ="nameLink" href="default.html">Haley Lai</a></p>
         </div>
         <div id="naviBox">
             <ul>
@@ -152,7 +153,7 @@
                 play basketball, walk my cat in the neighborhood, and visit the zoo. 
                 I am an animal lover, and I love to spend time with animals. 
                 Being around with them, I can always feel comfortable and my mind releases. 
-                It turns out that one of my hobbies I like the most is to let my cat sit on my lap 
+                The hobby I like the most is to let my cat sit on my lap 
                 while I am working on my coding project.</p></div>
             <img id="pic2"
                 data-aos="fade-right"
